gatewayService/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: observability
  labels:
    app.kubernetes.io/part-of: observability
    app.kubernetes.io/name: otel-gateway
    observability.my-org/metrics-scraper: "true"
