gatewayService/k8s/base/service-admin.yaml
apiVersion: v1
kind: Service
metadata:
  name: otel-gateway-admin
  labels:
    app.kubernetes.io/name: otel-gateway
    app.kubernetes.io/part-of: observability
    observability.my-org/service-role: admin
spec:
  type: ClusterIP
  internalTrafficPolicy: Cluster
  sessionAffinity: None
  selector:
    app.kubernetes.io/name: otel-gateway
  ports:
    - name: health
      port: 13133
      targetPort: health
    - name: metrics
      port: 8888
      targetPort: metrics
