gatewayService/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otel-gateway
  labels:
    app.kubernetes.io/name: otel-gateway
    app.kubernetes.io/part-of: observability
    observability.my-org/service-role: ingest
spec:
  type: ClusterIP
  internalTrafficPolicy: Cluster
  sessionAffinity: None
  selector:
    app.kubernetes.io/name: otel-gateway
  ports:
    - name: otlp-grpc
      port: 4317
      targetPort: otlp-grpc
    - name: otlp-http
      port: 4318
      targetPort: otlp-http
